Update Dashboard Css+JS

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,72 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="apple-touch-icon" href="/assets/app-assets/images/ico/apple-icon-120.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/app-assets/images/ico/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
+
+  <!-- BEGIN: Vendor CSS-->
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/vendors.min.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/charts/apexcharts.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/extensions/tether-theme-arrows.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/extensions/tether.min.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/extensions/shepherd-theme-default.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/tables/datatable/datatables.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/file-uploaders/dropzone.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/tables/datatable/extensions/dataTables.checkboxes.css">
+  <!-- END: Vendor CSS-->
+
+  <!-- BEGIN: Theme CSS-->
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/bootstrap-extended.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/colors.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/components.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/themes/dark-layout.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/themes/semi-dark-layout.css">
+
+  <!-- BEGIN: Page CSS-->
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/core/menu/menu-types/vertical-menu.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/core/colors/palette-gradient.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/pages/dashboard-analytics.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/pages/card-analytics.css">
+  <link rel="stylesheet" type="text/css" href="/assets/app-assets/css/plugins/tour/tour.css">
+  <!-- END: Page CSS-->
+
+  <!-- BEGIN: Custom CSS-->
+  <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+  <!-- END: Custom CSS-->
 </head>
 <body>
   <app-root></app-root>
+  
+<script src="/assets/app-assets/vendors/js/vendors.min.js"></script>
+<!-- BEGIN Vendor JS-->
+
+<!-- BEGIN: Page Vendor JS-->
+
+<script src="/assets/app-assets/vendors/js/extensions/dropzone.min.js"></script>
+<script src="/assets/app-assets/vendors/js/tables/datatable/datatables.min.js"></script>
+<script src="/assets/app-assets/vendors/js/tables/datatable/datatables.buttons.min.js"></script>
+<script src="/assets/app-assets/vendors/js/tables/datatable/datatables.bootstrap4.min.js"></script>
+<script src="/assets/app-assets/vendors/js/tables/datatable/buttons.bootstrap.min.js"></script>
+<script src="/assets/app-assets/vendors/js/tables/datatable/dataTables.select.min.js"></script>
+<script src="/assets/app-assets/vendors/js/tables/datatable/datatables.checkboxes.min.js"></script>
+<script src="/assets/app-assets/vendors/js/charts/apexcharts.min.js"></script>
+<script src="/assets/app-assets/vendors/js/extensions/tether.min.js"></script>
+ <!--
+<script src="/assets/app-assets/vendors/js/extensions/shepherd.min.js"></script>
+-->
+<!-- END: Page Vendor JS-->
+
+<!-- BEGIN: Theme JS-->
+<script src="/assets/app-assets/js/core/app-menu.js"></script>
+<script src="/assets/app-assets/js/core/app.js"></script>
+<script src="/assets/app-assets/js/scripts/components.js"></script>
+<!-- END: Theme JS-->
+
+<!-- BEGIN: Page JS-->
+<script src="/assets/app-assets/js/scripts/pages/dashboard-analytics.js"></script>
+<script src="/assets/app-assets/js/scripts/pages/faq-kb.js"></script>
 </body>
 
 </html>
