--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <link rel="apple-touch-icon" href="/assets/app-assets/images/ico/apple-icon-120.png">
   <link rel="shortcut icon" type="image/x-icon" href="/assets/app-assets/images/ico/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- BEGIN: Vendor CSS-->
   <link rel="stylesheet" type="text/css" href="/assets/app-assets/vendors/css/vendors.min.css">
